--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 # Documentation
 *.fig
 docs/**/*.tex
+docs/**/*.rst
+docs/**/*.PDF
+docs/static/????????????????????????????????????????.png
 docs/api/
 doc/
 out/
