--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "opensees"
-version = "0.0.8"
+version = "0.0.12"
 authors = [
   {name="Claudio M. Perez"}
   # <50180406+claudioperez@users.noreply.github.com>"
@@ -50,7 +50,8 @@ repository = "http://github.com/BRACE2/OpenSeesRT"
 
 [build-system]
 requires = [
-    "setuptools >= 35.0.2",
+    # "setuptools >= 35.0.2",
+    "setuptools >= 62.0.2",
     "setuptools_scm >= 2.0.0, <3"
 ]
 build-backend = "setuptools.build_meta"
