cmp - bump version

--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,11 @@
 *.fig
 *.pstex*
 docs/**/*.tex
+docs/contrib/static/
 docs/**/*.rst
 docs/**/*.PDF
+# Image  files of this specific length do not need to be
+# checked in
 docs/static/????????????????????????????????????????.png
 docs/api/
 doc/
