--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "src/opensees/units"]
 	path = src/opensees/units
-	url = git@github.com:claudioperez/libunits
+	url = https://github.com/BRACE2/libunits
