--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = opensees
-version = 0.0.7
+version = 0.0.20
 author = Claudio M. Perez
 author_email = claudio_perez@berkeley.edu
 description = opensees
@@ -13,7 +13,6 @@ license_files =
 classifiers =
     Development Status :: 5 - Production/Stable
     Intended Audience :: Developers
-    #License :: OSI Approved :: BSD License
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3 :: Only
 
@@ -26,7 +25,7 @@ keywords =
 package_dir = 
     = src
 packages = find:
-include_package_data = false
+include_package_data = true
 python_requires = >=3.6
 install_requires =
     numpy < 1.20.0; python_version<'3.8'
@@ -43,6 +42,7 @@ exclude =
     dist*
     docs*
     tests*
+    site*
 
 [options.extras_require]
 testing =
