--- a/etc/conda/meta.yaml
+++ b/etc/conda/meta.yaml
@@ -7,26 +7,32 @@ source:
   path: ../..
 
 build:
-  number: 0
-  script: python -m pip install . -vvv
+  script_env: [CONDA_PREFIX]
+  #number: 0
+    #script: python -m pip install . -vvv
 
 requirements:
   build:
     - "{{ compiler('c') }}"
     - "{{ compiler('cxx') }}"
     - "{{ compiler('fortran') }}"
-    - tcl
     - cmake
-    - pybind11
 
   host:
+    # Conda-Forge
+    - tk
+    - mysql
+    - libblas
+    - liblapack
+    - arpack
     - python
+    - pybind11
     - pip !=22.1.0
 
   run:
     - python
     - numpy
-    - tcl
+      #- tcl
     - matplotlib
 
 
