--- a/etc/install/setup.cfg
+++ b/etc/install/setup.cfg
@@ -28,6 +28,7 @@ packages = find:
 include_package_data = true
 python_requires = >=3.6
 install_requires =
+    scikit-build
     numpy < 1.20.0; python_version<'3.8'
     numpy ; python_version>='3.8'
     scipy < 1.6.0 ; python_version=='3.6'
