--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,8 @@ find_package(PythonExtensions REQUIRED)
 #add_library(_hello MODULE hello/_hello.cxx)
 add_subdirectory(src/libg3)
 python_extension_module(OpenSeesPyRT)
-install(TARGETS OpenSeesRT OpenSeesPyRT LIBRARY DESTINATION opensees)
+#pybind11_add_module(libOpenSeesPyRT MODULE OpenSeesPyRT)
+#install(TARGETS OpenSeesRT OpenSeesPyRT LIBRARY DESTINATION .)
+install(TARGETS OpenSeesRT OpenSeesPyRT LIBRARY DESTINATION .)
+
+
