--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,20 +51,21 @@ repository = "http://github.com/BRACE2/OpenSeesRT"
 [build-system]
 requires = [
     "scikit-build",
-    # "pybind11",
+    "pybind11",
     # "setuptools >= 35.0.2",
-    "setuptools >= 62.0.2",
+    "setuptools >= 52.0.2",
     # "setuptools_scm >= 2.0.0, <3"
 ]
 build-backend = "setuptools.build_meta"
 
-[tool.setuptools.packages.find]
-where = ["src"]
-exclude = [
-    "build*",
-    "dist*",
-    "docs*",
-    "tests*",
-    "site*"
-]
-
+# [tool.setuptools.packages.find]
+# where = ["src"]
+# exclude = [
+#     "build*",
+#     "dist*",
+#     "docs*",
+#     "tests*",
+#     "site*",
+#     "libg3*"
+# ]
+# 
