--- a/etc/conda/meta.yaml
+++ b/etc/conda/meta.yaml
@@ -40,15 +40,19 @@ requirements:
     - matplotlib
 
 
-  # test:
-  #   requires:
-  #     - pytest
-  #   imports:
-  #     - opensees
-  #     # source_files:
-  #     #   - tests
-  #     # commands:
-  #     #   - python -m pytest
+  test:
+    requires:
+      - pytest
+      - nbmake
+    imports:
+      - opensees
+    source_files:
+      - notebooks/
+      # commands:
+      #   - python -m pytest
+    commands:
+      - python -m pytest --nbmake notebooks/
+
 
 about:
   summary: "Idiomatic and idempotent bindings to the OpenSees framework."
