--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,19 +5,25 @@ authors = [
   {name="Claudio M. Perez"}
   # <50180406+claudioperez@users.noreply.github.com>"
 ]
+
 license = {file = "LICENSE"}
+
 readme = "README.md"
+
 description = "Idiomatic and idempotent bindings to the OpenSees framework."
+
 classifiers = [
     "Development Status :: 5 - Production/Stable",
     "Intended Audience :: Developers",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3 :: Only"
 ]
+
 keywords = [
     "seismic",
     "earthquake",
 ] 
+
 dependencies = [
     "numpy < 1.20.0; python_version<'3.8'",
     "numpy ; python_version>='3.8'",
@@ -28,17 +34,18 @@ dependencies = [
 ]
 
 [project.optional-dependencies]
-# DOCS
 testing = [
     "pytest >= 4.6",
     "pytest-checkdocs >= 2.4",
     "pytest-flake8",
     "nbmake"
 ]
+
 docs = [
     "elstir",
     "mkdocs-material"
 ]
+
 plots = [
     "matplotlib",
     "panel"
@@ -46,7 +53,7 @@ plots = [
 
 [project.urls]
 repository = "http://github.com/BRACE2/OpenSeesRT"
-# documentation = "https://brace2.github.io/OpenSeesRT"
+documentation = "https://brace2.github.io/OpenSeesRT"
 
 [build-system]
 requires = [
@@ -56,6 +63,7 @@ requires = [
     "setuptools >= 52.0.2",
     # "setuptools_scm >= 2.0.0, <3"
 ]
+
 build-backend = "setuptools.build_meta"
 
 # [tool.setuptools.packages.find]
