--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,7 +57,7 @@ documentation = "https://brace2.github.io/OpenSeesRT"
 
 [build-system]
 requires = [
-    "amoeba-build",
+    "amoeba-build >= 0.0.3",
     "pybind11",
     # "setuptools >= 35.0.2",
     "setuptools >= 52.0.2",
@@ -68,7 +68,7 @@ build-backend = "setuptools.build_meta"
 
 [tool.setuptools.packages.find]
 where = ["src"]
-exclude = ["libg3"]
+exclude = ["libg3*"]
 # exclude = [
 #     "build*",
 #     "dist*",
@@ -78,3 +78,4 @@ exclude = ["libg3"]
 #     "libg3*"
 # ]
 # 
+
