--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.18.0)
 project(OpenSeesRT)
-find_package(PythonExtensions REQUIRED)
+#find_package(PythonExtensions REQUIRED)
 
 #add_library(_hello MODULE hello/_hello.cxx)
 add_subdirectory(src/libg3)
