--- a/etc/doc-config/pandoc-web.yaml
+++ b/etc/doc-config/pandoc-web.yaml
@@ -26,7 +26,7 @@ filters:
 - include.lua
 - include-code-files.lua
 - pygmentize
-- elstir.lua
+- etc/doc-config/elstir.lua
 
 # method is plain, webtex, gladtex, mathml, mathjax, katex
 # you may specify a url with webtex, mathjax, katex
