--- a/pyproject.toml
+++ b/pyproject.toml
@@ -99,9 +99,9 @@ opensees = ["site*", "docs*", "*.html"]
 # manylinux-x86_64-image="manylinux2014"
 manylinux-x86_64-image="manylinux_2_24"
 
-[tool.cibuildwheel.windows]
-before-build="pip install delvewheel"
-repair-wheel-command="delvewheel repair -w {dest_dir} {wheel}"
+# [tool.cibuildwheel.windows]
+# before-build="pip install delvewheel"
+# repair-wheel-command="delvewheel repair -w {dest_dir} {wheel}"
 
 [tool.cibuildwheel.linux]
 #before-all = "apt install liblapack-dev tcl-dev"
