--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "opensees"
-version = "0.0.35"
+version = "0.0.45"
 authors = [
   {name="Claudio M. Perez"}
   # <50180406+claudioperez@users.noreply.github.com>"
@@ -44,6 +44,7 @@ dependencies = [
 #   "matplotlib",
 #   "panel",
     "sees",
+    "ssid",
 
 # Full-featured REPL
     "pyparsing",
@@ -86,17 +87,17 @@ build-backend = "setuptools.build_meta"
 
 [tool.setuptools.packages.find]
 where = ["src"]
-exclude = ["libg3*", "site*"]
+# exclude = ["libg3*", "site*"]
 
-#[tool.setuptools.package-data]
-#opensees = ["*.py", "*.so", "*.dll"]
+[tool.setuptools.package-data]
+opensees = ["*.py", "*.so", "*.dll"]
 
 [tool.setuptools.exclude-package-data]
-opensees = ["site*", "docs*", "*.html"]
+opensees = ["site*", "docs*", "*.html", "*.cmake"]
 
 
 [tool.cibuildwheel]
-skip = ["pp*", "*musllinux*"]
+skip = ["pp*", "*musllinux*", "cp36*", "*i686*", "UNKNOWN*"] #, "cp38*", "cp37*"] # , "cp39*", "cp311*"]
 manylinux-x86_64-image = "manylinux_2_28"
 # manylinux-x86_64-image="manylinux2014"
 # manylinux-x86_64-image="manylinux_2_24"
@@ -106,5 +107,9 @@ manylinux-x86_64-image = "manylinux_2_28"
 # repair-wheel-command="delvewheel repair -w {dest_dir} {wheel}"
 
 [tool.cibuildwheel.linux]
-before-all = "yum install -y tcl-devel mysql-devel lapack-devel"
+# before-all = "yum install -y tcl-devel mysql-devel lapack-devel"
+before-all = "yum install -y tcl-devel mysql-devel openblas-devel"
+#before-all = "yum-config-manager --add-repo https://yum.repos.intel.com/setup/intelproducts.repo && yum install intel-mkl-2020.0-088"
+# before-all = "rpm --import https://yum.repos.intel.com/intel-gpg-keys/GPG-PUB-KEY-INTEL-SW-PRODUCTS-2019.PUB && yum install intel-mkl"
+repair-wheel-command = "auditwheel repair --exclude libOpenSeesRT.so  -w {dest_dir} {wheel}"
 
