--- a/etc/doc-config/pandoc-web.yaml
+++ b/etc/doc-config/pandoc-web.yaml
@@ -20,13 +20,15 @@ metadata:
 
 
 filters:
-#- pandoc-crossref
-- citeproc
-- image_center.lua
-- include.lua
-- include-code-files.lua
-- pygmentize
-- etc/doc-config/elstir.lua
+  - tools/pandoc_plantuml_filter.py
+  - tools/apidoc.lua
+# - pygmentize; # slow!
+  - etc/doc-config/elstir.lua
+  - citeproc
+# - image_center.lua
+  - include.lua
+  - include-code-files.lua
+##- pandoc-crossref
 
 # method is plain, webtex, gladtex, mathml, mathjax, katex
 # you may specify a url with webtex, mathjax, katex
