cmp - update `pyproject.toml`

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,7 +50,8 @@ keywords = [
 
 dependencies = [
     "sees",
-    "ssid", # System identification
+    "sdof",
+    "mdof", # System identification
 #   "shps", # Shape functions and quadrature
 
     "numpy < 1.20.0; python_version<'3.8'",
